--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ build/Release/
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 npm-debug.log
+
+# mac osx
+.DS_Store
